--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,9 +3,8 @@ name = "securevault"
 version = "1.0.0"
 edition = "2021"
 authors = ["Gabriel Demetrios Lafis"]
-description = "Cryptocurrency custody system with multi-signature wallets and HSM integration"
+description = "Cryptocurrency custody system with hot/cold wallet separation and transaction audit trails"
 license = "MIT"
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
